--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,10 @@
 install.rdf
 node_modules
 bootstrap.js
-RESTED.*
+RESTED-APS.*
 manifest.json
 npm-debug.log
 target
-dist/*rested.js
-dist/*rested.js.map
+dist/*rested-aps.js
+dist/*rested-aps.js.map
 coverage/
