--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "RESTED",
-  "version": "2.1.1",
-  "description": "A REST client for the rest of us",
-  "homepage_url": "https://github.com/esphen/RESTED",
+  "name": "RESTED APS",
+  "version": "0.0.1",
+  "description": "A REST client for the rest of us, with APS features",
+  "homepage_url": "https://github.com/gear54rus/RESTED-APS",
   "contributors": [
     "Espen Henriksen",
     "Mostafa Mirmousavi",
@@ -12,7 +12,7 @@
   "manifest_version": 2,
   "applications": {
     "gecko": {
-      "id": "rested@restedclient",
+      "id": "rested-aps@restedclient",
       "strict_min_version": "45.0"
     }
   },
@@ -24,7 +24,7 @@
     "128": "dist/img/favicon/favicon-128x128.png"
   },
   "browser_action": {
-    "default_title": "RESTED",
+    "default_title": "RESTED APS",
     "default_icon": {
       "16": "dist/img/favicon/favicon-16x16.png",
       "32": "dist/img/favicon/favicon-32x32.png",
