--- a/google-chrome/manifest.json
+++ b/google-chrome/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "RESTED",
-  "version": "2.1.1",
-  "description": "A REST client for the rest of us",
-  "homepage_url": "https://github.com/esphen/RESTED",
+  "name": "RESTED APS",
+  "version": "0.0.1",
+  "description": "A REST client for the rest of us, with APS features",
+  "homepage_url": "https://github.com/gear54rus/RESTED-APS",
   "manifest_version": 2,
   "icons": {
     "16": "dist/img/favicon/favicon-16x16.png",
@@ -12,7 +12,7 @@
     "128": "dist/img/favicon/favicon-128x128.png"
   },
   "browser_action": {
-    "default_title": "RESTED",
+    "default_title": "RESTED APS",
     "default_icon": {
       "16": "dist/img/favicon/favicon-16x16.png",
       "32": "dist/img/favicon/favicon-32x32.png",
