Added content script, fixed webpack configuration
Updated '.gitignore' to match root dir files only

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
-.idea
-*.xpi
-install.rdf
-node_modules
-bootstrap.js
-RESTED-APS.*
-manifest.json
-npm-debug.log
-target
-dist/*rested-aps.js
-dist/*rested-aps.js.map
-coverage/
+/.idea
+/node_modules
+/RESTED-APS.*
+/manifest.json
+/dist/background.js
+/dist/content.js
+/dist/rested-aps.js
+/coverage/
