--- a/google-chrome/manifest.json
+++ b/google-chrome/manifest.json
@@ -29,6 +29,7 @@
     {
       "matches": ["*://*/*"],
       "match_about_blank": false,
+      "all_frames": true,
       "js": ["dist/content.js"],
       "run_at": "document_idle"
     }
@@ -36,7 +37,6 @@
   "permissions": [
     "<all_urls>",
     "webRequest",
-    "storage",
-    "tabs"
+    "storage"
   ]
 }
