--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "react-dnd-test-backend": "^2.5.4",
     "react-test-renderer": "^16.2.0",
     "remote-redux-devtools": "^0.5.12",
+    "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "^3.11.0",
     "whatwg-fetch": "^2.0.3"
   }
